add new section

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="container-fluid header">
+<header class="header">
 	<nav>
 		<div class="header__navbar">
 			<div class="header__navigation">
