--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
 		"title": "Главная"
 	})
 <body>
-	<div class="circle"><span></span></div>
-
+	<div class="circle"></div>
+	
 	@@include("html/header.html", {})
 
 	<main>
-		
+		@@include("html/section-platform.html", {})
+		@@include("html/power.html", {})
 	</main>
 
 	@@include("html/footer.html", {})
