add swiper fix tabs

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 	<main>
 		@@include("html/section-platform.html", {})
 		@@include("html/power.html", {})
+		@@include("html/gaming.html", {})
+		@@include("html/unlimited.html", {})
 	</main>
 
 	@@include("html/footer.html", {})
