add plan section

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 		@@include("html/power.html", {})
 		@@include("html/gaming.html", {})
 		@@include("html/unlimited.html", {})
+		@@include("html/plan.html", {})
 	</main>
 
 	@@include("html/footer.html", {})
