--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -12,11 +12,11 @@
 					<p class="plan-card__title-chip">recommended</p>
 				</div>
 				<div class="plan-card__price">
-					<p class="plan-card__price-price"><span>€</span>7.49</p>
+					<p class="plan-card__price-price"><sup>€</sup>7.49</p>
 					<p class="plan-card__price-month">per month</p>
 				</div>
 				<div class="plan-card__footer">
-					<span>€</span><span>89.89</span>annually as one payment
+					<sup>€</sup><span>89.89</span>annually as one payment
 				</div>
 			</div>
 
@@ -26,11 +26,11 @@
 					<p class="plan-card__title-chip">POPULAR</p>
 				</div>
 				<div class="plan-card__price">
-					<p class="plan-card__price-price"><span>€</span>9.89</p>
+					<p class="plan-card__price-price"><sup>€</sup>9.89</p>
 					<p class="plan-card__price-month">per month</p>
 				</div>
 				<div class="plan-card__footer">
-					<span>€</span><span>9.89</span>each month as one payment
+					<sup>€</sup><span>9.89</span>each month as one payment
 				</div>
 			</div>
 		</div>
