fix plan section

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 		@@include("html/gaming.html", {})
 		@@include("html/unlimited.html", {})
 		@@include("html/plan.html", {})
+		@@include("html/begin.html", {})
 	</main>
 
 	@@include("html/footer.html", {})
