create parthners section

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 		@@include("html/unlimited.html", {})
 		@@include("html/plan.html", {})
 		@@include("html/begin.html", {})
+		@@include("html/partners.html", {})
 	</main>
 
 	@@include("html/footer.html", {})
