--- a/src/html/begin.html
+++ b/src/html/begin.html
@@ -1,9 +1,9 @@
-<section class="begin">
+<section class="begin" data-scroll-section>
 	<div class="container">
 		<div class="begin__inner">
 			<div class="begin__content">
-				<h3 class="begin__title title">Let the Journey <br>	begin!</h3>
-				<ul class="begin__list">
+				<h3 class="begin__title title" data-scroll data-scroll-speed="3">Let the Journey <br>	begin!</h3>
+				<ul class="begin__list" data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal">
 					<li class="begin__item">
 						<svg width="34" height="31" viewBox="0 0 34 31" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M2.25843 25.9196H11.5039V28.4079H9.70417C9.38658 28.4079 9.17486 28.6498 9.17486 28.9263V30.4815C9.17486 30.7926 9.42187 30.9999 9.70417 30.9999H18.4203C18.7379 30.9999 18.9496 30.758 18.9496 30.4815V28.9263C18.9496 28.6153 18.7026 28.4079 18.4203 28.4079H16.6206V25.9196H25.866C27.1364 25.9196 28.1245 24.9173 28.1245 23.7077V18.0398H25.0191V22.8782H3.10534V8.91583H13.7976V5.87451H2.25843C0.988061 5.87451 0 6.87676 0 8.08638V23.7077C0 24.9519 1.02335 25.9196 2.25843 25.9196Z" fill="url(#paint0_linear_1904_971)"/>
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 			<div class="begin__box">
-				<div class="begin__image">
+				<div class="begin__image" data-scroll data-scroll-speed="-4" data-scroll-direction="horizontal">
 					<img src="@img/begin_img.png" alt="image" width="1005" height="801">
 				</div>
 			</div>
