--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -1,12 +1,12 @@
-<section class="plan">
+<section class="plan" data-scroll-section>
 	<div class="container">
 		<div class="plan__title">
-			<h3 class="plan__title-title subtitle">Choose your plan!</h3>
-			<p class="plan__title-txt">Subscribe and enjoy</p>
+			<h3 class="plan__title-title subtitle" data-scroll data-scroll-speed="3">Choose your plan!</h3>
+			<p class="plan__title-txt" data-scroll data-scroll-speed="2">Subscribe and enjoy</p>
 		</div>
 
 		<div class="plan__cards">
-			<div class="plan__card plan-card">
+			<div class="plan__card plan-card" data-scroll data-scroll-speed="1" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="plan-card__title">
 					<h4 class="plan-card__title-title">Ultimate</h4>
 					<p class="plan-card__title-chip">recommended</p>
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 
-			<div class="plan__card plan-card">
+			<div class="plan__card plan-card" data-scroll data-scroll-speed="-1" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="plan-card__title">
 					<h4 class="plan-card__title-title">start</h4>
 					<p class="plan-card__title-chip">POPULAR</p>
