--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -1,8 +1,8 @@
-<section class="unlimited">
+<section class="unlimited" data-scroll-section>
 	<div class="container">
 		<div class="unlimited__title">
-			<h3 class="unlimited__title-title subtitle">Unlimited AAA gaming</h3>
-		<p class="unlimited__title-note">Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere!</p>
+			<h3 class="unlimited__title-title subtitle" data-scroll data-scroll-speed="4">Unlimited AAA gaming</h3>
+		<p class="unlimited__title-note" data-scroll data-scroll-speed="3">Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere!</p>
 		</div>
 		<div class="unlimited__wrap">
 			<div class="unlimited__right-border">
