--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" data-scroll-section>
 	<div class="container">
 		<div class="footer__box">
 			<div class="footer__inner">
