--- a/src/html/gaming.html
+++ b/src/html/gaming.html
@@ -1,8 +1,8 @@
-<section class="gaming">
+<section class="gaming" data-scroll-section>
 	<div class="container">
-		<h3 class="gaming__title subtitle">More than just gaming</h3>
+		<h3 class="gaming__title subtitle" data-scroll data-scroll-speed="3">More than just gaming</h3>
 		<div class="gaming__cards">
-			<article class="gaming__card">
+			<article class="gaming__card" data-scroll data-scroll-speed="3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="gaming__image">
 					<img src="@img/gaming_downloads.svg" alt="image card" width="221" height="140">
 				</div>
@@ -11,7 +11,7 @@
 					<p class="gaming__content-text">Response within 1-2 minutes. </p>
 				</div>
 			</article>
-			<article class="gaming__card">
+			<article class="gaming__card" data-scroll data-scroll-speed="2">
 				<div class="gaming__image">
 					<img src="@img/gaming_devices.svg" alt="image card" width="221" height="140">
 				</div>
@@ -20,7 +20,7 @@
 					<p class="gaming__content-text">Switch from device to device.</p>
 				</div>
 			</article>
-			<article class="gaming__card">
+			<article class="gaming__card" data-scroll data-scroll-speed="-3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="gaming__image">
 					<img src="@img/gaming_stream.svg" alt="image card" width="221" height="140">
 				</div>
