--- a/src/html/power.html
+++ b/src/html/power.html
@@ -1,10 +1,10 @@
-<section class="power">
+<section class="power" data-scroll-section>
 	<div class="container">
-		<h3 class="power__title subtitle">
+		<h3 class="power__title subtitle" data-scroll data-scroll-speed="5">
 			Power up your devices
 		</h3>
 		<div class="power__container">
-			<div class="power__image">
+			<div class="power__image" data-scroll data-scroll-speed="4">
 				<img src="@img/power-1.png" alt="background image">
 			</div>
 			<ul class="power__list">
