--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -1,4 +1,4 @@
-<section class="platform">
+<section class="platform" data-scroll-section>
 	<div class="container">
 		<div class="platform__container">
 			<div class="platform__description">
@@ -26,7 +26,7 @@
 					<button class="platform__button-btn basic-button">PLAY NOW</button>
 				</div>
 			</div>
-			<div class="platform__image">
+			<div class="platform__image" data-scroll data-scroll-speed="4">
 				<img src="@img/platform_1.png" alt="image" width="924" height="937">
 			</div>
 		</div>
