--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,21 @@
 	})
 <body>
 	<div class="circle"></div>
-	
-	@@include("html/header.html", {})
+	<div class="wrapper" data-scroll-container>
+		@@include("html/header.html", {})
 
-	<main>
-		@@include("html/section-platform.html", {})
-		@@include("html/power.html", {})
-		@@include("html/gaming.html", {})
-		@@include("html/unlimited.html", {})
-		@@include("html/plan.html", {})
-		@@include("html/begin.html", {})
-		@@include("html/partners.html", {})
-	</main>
+		<main>
+			@@include("html/section-platform.html", {})
+			@@include("html/power.html", {})
+			@@include("html/gaming.html", {})
+			@@include("html/unlimited.html", {})
+			@@include("html/plan.html", {})
+			@@include("html/begin.html", {})
+			@@include("html/partners.html", {})
+		</main>
 
-	@@include("html/footer.html", {})
+		@@include("html/footer.html", {})
+	</div>
 
 	<script src="js/app.min.js"></script>
 </body>
