add responsive gaming section for notebooks

--- a/src/html/power.html
+++ b/src/html/power.html
@@ -5,7 +5,9 @@
 		</h3>
 		<div class="power__container">
 			<div class="power__image" data-scroll data-scroll-speed="4">
-				<img src="@img/power-1.png" alt="background image">
+				<div class="power__image-box">
+					<img src="@img/power-1.png" alt="background image">
+				</div>
 			</div>
 			<ul class="power__list">
 				<li class="power__item">
