adding responsive md

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-	<nav>
+	<nav id="navigation">
 		<div class="header__navbar">
 			<div class="header__navigation">
 				<a class="header__logo" href="#">
