--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -7,6 +7,7 @@
 		<div class="unlimited__wrap">
 			<div class="unlimited__right-border">
 				<img src="@img/unlimited_right_border.png" alt="image" width="277" height="498">
+				<img src="@img//strange-man.png" alt="image" width="170" height="358">
 			</div>
 			<div class="unlimited__swiper">
 				<div class="swiper-wrapper">
@@ -129,7 +130,7 @@
 								</div>
 							</div>
 							<ul class="devices__links devices__center">
-								<li class="devices__item">
+								<li class="devices__item mr-md-auto">
 									<a href="#" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon icon-android">
 											<svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
