--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,13 +1,15 @@
 <header class="header">
-	<nav id="navigation">
+	<nav id="navigation" class="header__nav">
 		<div class="header__navbar">
 			<div class="header__navigation">
 				<a class="header__logo" href="#">
 					<img src="@img/logo.svg" alt="boosteroid logo">
+					<img src="@img/logo_mini.svg" width="49" height="30" alt="boosteroid logo mini">
 				</a>
 				<ul class="header__list">
 					<li class="header__item">
-						<a href="#" class="header__item-link">downloads</a>
+						<a href="#" class="header__item-link header__item-link--md">downloads</a>
+						<a href="#" class="header__item-link header__item-link--sm">our app</a>
 					</li>
 					<li class="header__item">
 						<a href="#" class="header__item-link">Blog</a>
