adding responsive 320 and fix IOS animated

--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -16,7 +16,7 @@
 					<p class="plan-card__price-month">per month</p>
 				</div>
 				<div class="plan-card__footer">
-					<sup>€</sup><span>89.89</span>annually as one payment
+					<span><sup>€</sup>89.89</span>annually as one payment
 				</div>
 			</div>
 
@@ -30,7 +30,7 @@
 					<p class="plan-card__price-month">per month</p>
 				</div>
 				<div class="plan-card__footer">
-					<sup>€</sup><span>9.89</span>each month as one payment
+					<span><sup>€</sup>9.89</span>each month as one payment
 				</div>
 			</div>
 		</div>
