--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -6,8 +6,8 @@
 		</div>
 		<div class="unlimited__wrap">
 			<div class="unlimited__right-border">
-				<img src="@img/unlimited_right_border.png" alt="image" width="277" height="498">
-				<img src="@img//strange-man.png" alt="image" width="170" height="358">
+				<img class="unlimited__right-border--first" src="@img/unlimited_right_border.png" alt="image" width="277" height="498">
+				<img class="unlimited__right-border--second" src="@img//strange-man.png" alt="image" width="170" height="358">
 			</div>
 			<div class="unlimited__swiper">
 				<div class="swiper-wrapper">
@@ -112,7 +112,7 @@
 							</div>
 							<ul class="devices__links devices__center">
 								<li class="devices__item devices__center-item">
-									<a href="#" class="devices__item-link btn-with-icon">
+									<a href="#" class="devices__item-link btn-with-icon devices__item-link--custom-link">
 										Please proceed to Play Market on your Android TV!
 									</a>
 								</li>
@@ -123,7 +123,7 @@
 						<div class="devices__wrap">
 							<div class="devices__inner">
 								<div class="devices__image">
-									<img src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
+									<img class="devices__image-beta" src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
 								</div>
 								<div class="devices__text">
 									Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices!
@@ -153,13 +153,24 @@
 
 				<div class="swiper__pagination"></div>
 		
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
+				<div class="swiper-button-prev">
+					<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M10 20C15.5228 20 20 15.523 20 10C20 4.47723 15.523 -3.91393e-07 10 -8.74228e-07C4.47702 -1.35706e-06 1.35706e-06 4.47702 8.74228e-07 10C3.91412e-07 15.5228 4.47702 20 10 20ZM12.1325 4.40217L13.3864 4.40197L7.63178 9.94441L13.3621 15.5981L12.1245 15.5983L6.3854 9.93685L12.1325 4.40217Z" fill="white" fill-opacity="0.5"/>
+					</svg>
+				</div>
+				<div class="swiper-button-next">
+					<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M10 0C4.47723 0 0 4.47702 0 10C0 15.5228 4.47702 20 10 20C15.523 20 20 15.523 20 10C20 4.47723 15.523 0 10 0ZM7.86755 15.5978L6.61356 15.598L12.3682 10.0556L6.63789 4.40186L7.87547 4.40166L13.6146 10.0631L7.86755 15.5978Z" fill="white"/>
+					</svg>
+				</div>
 
 			</div>
 		</div>
 	</div>
 	<div class="unlimited__footer">
+		<div class="unlimited__footer-right-img">
+			<img src="@img/strange-man.png" width="121" height="254" alt="content image">
+		</div>
 		<ul class="unlimited__footer-list">
 			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img unlimited__footer-item-img--win">
