--- a/src/html/begin.html
+++ b/src/html/begin.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="begin__inner">
 			<div class="begin__content">
-				<h3 class="begin__title title" data-scroll data-scroll-speed="3">Let the Journey <br>	begin!</h3>
+				<h3 class="begin__title title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>Let the Journey <br>	begin!</h3>
 				<ul class="begin__list"> 
 					<!-- data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal" -->
 					<li class="begin__item">
