--- a/src/html/gaming.html
+++ b/src/html/gaming.html
@@ -1,6 +1,6 @@
 <section class="gaming" data-scroll-section>
 	<div class="container">
-		<h3 class="gaming__title subtitle" data-scroll data-scroll-speed="3">More than just gaming</h3>
+		<h3 class="gaming__title subtitle title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>More than just gaming</h3>
 		<div class="gaming__cards">
 			<article class="gaming__card" data-scroll data-scroll-speed="3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="gaming__image">
