--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -1,8 +1,8 @@
 <section class="plan" data-scroll-section>
 	<div class="container">
-		<div class="plan__title">
-			<h3 class="plan__title-title subtitle" data-scroll data-scroll-speed="3">Choose your plan!</h3>
-			<p class="plan__title-txt" data-scroll data-scroll-speed="2">Subscribe and enjoy</p>
+		<div class="plan__title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>
+			<h3 class="plan__title-title subtitle">Choose your plan!</h3>
+			<p class="plan__title-txt">Subscribe and enjoy</p>
 		</div>
 
 		<div class="plan__cards">
