--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="platform__container">
 			<div class="platform__description">
-				<h2 class="platform__title title">CLOUD GAMING PLATFORM</h2>
+				<h2 class="platform__title title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>CLOUD GAMING PLATFORM</h2>
 				<div class="platform__cards">
 					<div class="platform__cards-item">
 						AAA games <br> on weak harware
@@ -26,7 +26,10 @@
 					<button class="platform__button-btn basic-button">PLAY NOW</button>
 				</div>
 			</div>
-			<div class="platform__image" data-scroll data-scroll-speed="4">
+			<!-- <div class="platform__image" data-scroll data-scroll-speed="4">
+				<img src="@img/platform_1.png" alt="image" width="924" height="937">
+			</div> -->
+			<div class="platform__image">
 				<img src="@img/platform_1.png" alt="image" width="924" height="937">
 			</div>
 		</div>
