--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -1,8 +1,8 @@
 <section class="unlimited" data-scroll-section>
 	<div class="container">
-		<div class="unlimited__title">
-			<h3 class="unlimited__title-title subtitle" data-scroll data-scroll-speed="4">Unlimited AAA gaming</h3>
-		<p class="unlimited__title-note" data-scroll data-scroll-speed="3">Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere!</p>
+		<div class="unlimited__title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>
+			<h3 class="unlimited__title-title subtitle">Unlimited AAA gaming</h3>
+		<p class="unlimited__title-note">Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere!</p>
 		</div>
 		<div class="unlimited__wrap">
 			<div class="unlimited__right-border">
@@ -171,7 +171,7 @@
 		<div class="unlimited__footer-right-img">
 			<img src="@img/strange-man.png" width="121" height="254" alt="content image">
 		</div>
-		<ul class="unlimited__footer-list">
+		<ul class="unlimited__footer-list" data-scroll data-scroll-class="fade-effect-off" data-scroll-repeat="true">
 			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img unlimited__footer-item-img--win">
 					<svg width="67" height="67" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
