--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 	})
 <body>
 	<div class="circle"></div>
+	<div class="blur"></div>
 	<div class="wrapper" data-scroll-container>
+		<!-- <div class="blur"></div> -->
 		@@include("html/header.html", {})
 
 		<main>
