--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -1,6 +1,6 @@
 <section class="partners" data-scroll-section>
 	<div class="container">
-		<h3 class="partners__title subtitle" data-scroll data-scroll-speed="4">Our Partners</h3>
+		<h3 class="partners__title subtitle title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>Our Partners</h3>
 		<ul class="partners__companies">
 			<li class="partners__companies-intel" data-scroll data-scroll-speed="3" data-scroll-delay="0.11" data-scroll-direction="horizontal">
 				<svg width="158" height="102" viewBox="0 0 158 102" fill="none" xmlns="http://www.w3.org/2000/svg">
