fix bug heigth mobile calculate

--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -112,9 +112,9 @@
 							</div>
 							<ul class="devices__links devices__center">
 								<li class="devices__item devices__center-item">
-									<a href="#" class="devices__item-link btn-with-icon devices__item-link--custom-link">
+									<p class="devices__item-link btn-with-icon devices__item-link--custom-link">
 										Please proceed to Play Market on your Android TV!
-									</a>
+									</p>
 								</li>
 							</ul>
 						</div>
