fix css files and adding download page skeleton

--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -122,7 +122,7 @@
 					<div class="swiper-slide devices">
 						<div class="devices__wrap">
 							<div class="devices__inner">
-								<div class="devices__image">
+								<div class="devices__image devices__image--tv">
 									<img class="devices__image-beta" src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
 								</div>
 								<div class="devices__text">
@@ -130,7 +130,7 @@
 								</div>
 							</div>
 							<ul class="devices__links devices__center">
-								<li class="devices__item mr-md-auto">
+								<li class="devices__item text-md-left-xl-center">
 									<a href="#" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon icon-android">
 											<svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
