--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,8 +8,8 @@
 				</a>
 				<ul class="header__list">
 					<li class="header__item">
-						<a href="#" class="header__item-link header__item-link--md">downloads</a>
-						<a href="#" class="header__item-link header__item-link--sm">our app</a>
+						<a href="downloads/" class="header__item-link header__item-link--md">downloads</a>
+						<a href="downloads/" class="header__item-link header__item-link--sm">our app</a>
 					</li>
 					<li class="header__item">
 						<a href="#" class="header__item-link">Blog</a>
