--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="isAnimate">
 	@@include("html/head.html", {
 		"title": "Главная"
 	})
@@ -7,7 +7,6 @@
 	<div class="circle"></div>
 	<div class="blur"></div>
 	<div class="wrapper" data-scroll-container>
-		<!-- <div class="blur"></div> -->
 		@@include("html/header.html", {})
 
 		<main>
