adding downloads page, styles and responsive windows

--- a/src/downloads/index.html
+++ b/src/downloads/index.html
@@ -8,6 +8,7 @@
 		<title>Downloads</title>
 	</head>
 <body>
+	<div class="circle"></div>
 	<div class="blur"></div>
 	<header class="header">
 		<nav id="navigation" class="header__nav">
@@ -51,7 +52,7 @@
 			@@include("../html/secondPages/download.html", {})
 		</main>
 
-		@@include("../html/secondPages/footer.html", {})
+		@@include("../html/secondPages/footer_with_bg.html", {})
 	</div>
 
 	<script src="../js/app.min.js"></script>
