add new pages and fix animation

--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -51,7 +51,7 @@
 							</div>
 							<ul class="devices__links">
 								<li class="devices__item">
-									<a href="#" class="devices__item-link btn-with-icon">
+									<a href="downloads/index.html" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon">
 											<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M24.9966 0L11.4502 1.97098V11.9591L24.9966 11.8519V0Z" fill="white"/>
@@ -67,7 +67,7 @@
 									</a>
 								</li>
 								<li class="devices__item">
-									<a href="#" class="devices__item-link btn-with-icon">
+									<a href="downloads/index.html" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon icon-apple">
 											<svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M18.4508 23.9933C17.0841 25.3093 15.5762 25.1041 14.139 24.4836C12.6109 23.8506 11.214 23.8106 9.60016 24.4836C7.59049 25.3443 6.52387 25.0941 5.31353 23.9933C-1.51987 17.0129 -0.511248 6.37985 7.25512 5.97955C9.13872 6.07963 10.4575 7.01284 11.567 7.0904C13.2161 6.75764 14.7946 5.80442 16.5596 5.92951C18.6803 6.09964 20.2663 6.93027 21.3254 8.42391C16.9631 11.0259 17.9969 16.7302 22.0037 18.3314C21.2018 20.4205 20.173 22.4846 18.4483 24.0108L18.4508 23.9933ZM11.4157 5.90449C11.2114 2.80213 13.7456 0.25019 16.6605 0C17.0614 3.57772 13.3825 6.25476 11.4157 5.90449Z" fill="white"/>
@@ -80,7 +80,7 @@
 									</a>
 								</li>
 								<li class="devices__item">
-									<a href="#" class="devices__item-link btn-with-icon">
+									<a href="downloads/index.html" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon">
 											<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M3.18421 14.9339C4.52657 14.9339 5.61476 13.8451 5.61476 12.5019C5.61476 11.1587 4.52657 10.0698 3.18421 10.0698C1.84186 10.0698 0.753662 11.1587 0.753662 12.5019C0.753662 13.8451 1.84186 14.9339 3.18421 14.9339Z" fill="white"/>
