--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="../css/style.min.css">
-		<title>Downloads</title>
+		<title>FAQ</title>
 	</head>
 <body>
 	<div class="circle"></div>
@@ -20,14 +20,14 @@
 					</a>
 					<ul class="header__list">
 						<li class="header__item">
-							<a href="#" class="header__item-link header__item-link--md">downloads</a>
-							<a href="#" class="header__item-link header__item-link--sm">our app</a>
+							<a href="../downloads/index.html" class="header__item-link header__item-link--md">downloads</a>
+							<a href="../downloads/index.html" class="header__item-link header__item-link--sm">our app</a>
 						</li>
 						<li class="header__item">
 							<a href="#" class="header__item-link">Blog</a>
 						</li>
 						<li class="header__item">
-							<a href="../faq/index.html" class="header__item-link">faq</a>
+							<a href="#" class="header__item-link">faq</a>
 						</li>
 						<li class="header__item">
 							<a href="#" class="header__item-link">Help center</a>
@@ -49,7 +49,7 @@
 	</header>
 
 		<main>
-			@@include("../html/secondPages/download.html", {})
+			@@include("../html/faq.html", {})
 		</main>
 
 		@@include("../html/secondPages/footer_with_bg.html", {})
