--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,14 +8,14 @@
 				</a>
 				<ul class="header__list">
 					<li class="header__item">
-						<a href="downloads/" class="header__item-link header__item-link--md">downloads</a>
-						<a href="downloads/" class="header__item-link header__item-link--sm">our app</a>
+						<a href="downloads/index.html" class="header__item-link header__item-link--md">downloads</a>
+						<a href="downloads/index.html" class="header__item-link header__item-link--sm">our app</a>
 					</li>
 					<li class="header__item">
 						<a href="#" class="header__item-link">Blog</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link">faq</a>
+						<a href="faq/index.html" class="header__item-link">faq</a>
 					</li>
 					<li class="header__item">
 						<a href="#" class="header__item-link">Help center</a>
