adding fix and create banner and cookie

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,26 @@
 
 		@@include("html/footer.html", {})
 	</div>
+	<div class="cookie">
+		<button class="cookie__close"></button>
+		<div class="cookie__container">
+			<h4 class="cookie__title">We value your privacy</h4>
+			<p class="cookie__text">This website uses cookies necessary to maintain its functionality, improve your experience and our services.</p>
+			<p class="cookie__text">By clicking Allow or dismissing this banner, you accept our <a href="#">Cookie Policy</a> and <a href="#">Privacy Policy</a>.</p>
+		</div>
+		<div class="cookie__allow">
+			<button class="cookie__btn second-btn">Allow</button>
+		</div>
+	</div>
+	<div class="banner" style="max-height: 100%;">
+		<button class="banner__button"></button>
+		<a href="#" class="banner-link">
+			<img class="banner__sm" width="500" height="40" src="@img/banners/banner_sm.png" alt="banner">
+			<img class="banner__md" width="992" height="60" src="@img/banners/banner_md.png" alt="banner">
+			<img width="1440" height="80" class="banner__l" src="@img/banners/banner_l.png" alt="banner">
+			<img class="banner__xl" src="@img/banners/banner_xl.png" alt="banner" width="1920" height="80">
+		</a>
+	</div>
 
 	<script src="js/app.min.js"></script>
 </body>
