--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -47,7 +47,7 @@
 				</ul>
 			</div>
 			<div class="footer__inner">
-				<h5 class="footer__follow">Follow us</h5>
+				<h5 class="footer__follow"><span>Follow us</span></h5>
 				<ul class="footer__social">
 					<li class="footer__icon">
 						<a href="#" class="footer__icon-link">
