add loaded and fix transform

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
 	@@include("html/head.html", {
 		"title": "Главная"
 	})
-<body>
+<body class="locked">
+
+	<div class="mask">
+		<div class="mask__loader"></div>
+	</div>
+
 	<div class="circle"></div>
 	<div class="blur"></div>
 	<div class="circle-lines">
