--- a/src/downloads/index.html
+++ b/src/downloads/index.html
@@ -27,7 +27,7 @@
 							<a href="#" class="header__item-link header__item-link--sm">our app</a>
 						</li>
 						<li class="header__item">
-							<a href="#" class="header__item-link">Blog</a>
+							<a href="../blog/index.html" class="header__item-link">Blog</a>
 						</li>
 						<li class="header__item">
 							<a href="../faq/index.html" class="header__item-link">faq</a>
