adding custom dropdown and add responsive 320+ mobile devices

--- a/src/html/secondPages/blog.html
+++ b/src/html/secondPages/blog.html
@@ -196,37 +196,43 @@
 					</div>
 				</div>
 			</div>
-			<div class="blog__categories">
-				<h2 class="blog__categories-title">
+			<div class="blog__categories dropdown">
+				<div class="dropdown__select">
+					<input id="selected-name" type="text" placeholder="Selected" onfocus="this.blur()">
+				</div>
+				<h2 class="blog__categories-title dropdown__title">
 					Categories
 				</h2>
-				<ul class="blog__categories-list">
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Gaming</button>
+				<ul class="blog__categories-list dropdown__list">
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">All</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Action</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Gaming</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Strategy</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Action</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">GTA 5</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Strategy</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Epic Games Store</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">GTA 5</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Fortnite</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Epic Games Store</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Partnerships</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Fortnite</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Boosteroid</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Partnerships</button>
 					</li>
-					<li class="blog__categories-item">
-						<button class="blog__categories-link">Update</button>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Boosteroid</button>
+					</li>
+					<li class="blog__categories-item dropdown__item">
+						<button class="blog__categories-link dropdown__link">Update</button>
 					</li>
 				</ul>
 			</div>
