add responsive custom blog_post

--- a/src/html/secondPages/blog.html
+++ b/src/html/secondPages/blog.html
@@ -13,16 +13,16 @@
 		<div class="blog__box">
 			<div class="blog__posts posts">
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_1.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">gaming</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Boosteroid August News</h2>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -33,17 +33,17 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_2.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">update</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Boosteroid August News</h2>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -54,16 +54,16 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_3.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">epic game store</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Top-4 Reason</h2>
-							<h3 class="post__subtitle">Why You Should Try Boosteroid App</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Top-4 Reason</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Why You Should Try Boosteroid App</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -74,16 +74,16 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_1.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">gaming</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Boosteroid August News</h2>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -94,17 +94,17 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_2.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">update</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Boosteroid August News</h2>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -115,16 +115,16 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_3.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">epic game store</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Top-4 Reason</h2>
-							<h3 class="post__subtitle">Why You Should Try Boosteroid App</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Top-4 Reason</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Why You Should Try Boosteroid App</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -135,16 +135,16 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_1.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">gaming</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Boosteroid August News</h2>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -155,17 +155,17 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_2.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">update</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Boosteroid August News</h2>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
-							<h3 class="post__subtitle">Boosteroid Latest July News</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
+							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
@@ -176,16 +176,16 @@
 					</div>
 				</div>
 				<div class="blog__post post">
-					<a class="post__image" href="#">
+					<a class="post__image blog__post-image" href="#">
 						<img src="../@img/blog/blog_3.jpg" alt="background image">
 					</a>
-					<div class="post__box">
+					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">epic game store</p>
 						</div>
-						<a class="post__inner" href="#">
-							<h2 class="post__title">Top-4 Reason</h2>
-							<h3 class="post__subtitle">Why You Should Try Boosteroid App</h3>
+						<a class="post__inner blog__post-inner" href="#">
+							<h2 class="post__title blog__post-title">Top-4 Reason</h2>
+							<h3 class="post__subtitle blog__post-subtitle">Why You Should Try Boosteroid App</h3>
 						</a>
 						<div class="post__date">
 							<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
