adding little desctop responssve version

--- a/src/html/secondPages/articlePost.html
+++ b/src/html/secondPages/articlePost.html
@@ -207,7 +207,7 @@
 				</div>
 				<div class="article-post__aside-post aside-post">
 					<div class="aside-post__tag">
-						<p class="border-radius-gradient tag">update</p>
+						<p class="border-radius-gradient tag">STRATEGY</p>
 					</div>
 					<a href="#" class="aside-post__content">
 						<h2 class="aside-post__content-title">What Happened In July?</h2>
@@ -239,7 +239,7 @@
 				</div>
 				<div class="article-post__aside-post aside-post">
 					<div class="aside-post__tag">
-						<p class="border-radius-gradient tag">update</p>
+						<p class="border-radius-gradient tag">EPIC GAMES STORE</p>
 					</div>
 					<a href="#" class="aside-post__content">
 						<h2 class="aside-post__content-title">What Happened In July?</h2>
