adding mobile responsive on article

--- a/src/html/secondPages/articlePost.html
+++ b/src/html/secondPages/articlePost.html
@@ -6,10 +6,10 @@
 					<a class="blog__breadcrumbs-link" href="#">Home</a>
 				</li>
 				<li class="blog__breadcrumbs-item">
-					<a class="blog__breadcrumbs-link" href="#">Blog</a>
+					<a class="blog__breadcrumbs-link" href="../blog/index.html">Blog</a>
 				</li>
 				<li class="blog__breadcrumbs-item">
-					<a class="blog__breadcrumbs-link" href="#">Categorie</a>
+					<a class="blog__breadcrumbs-link" href="../filter-post/index.html">Categorie</a>
 				</li>
 				<li class="blog__breadcrumbs-item">
 					<a class="blog__breadcrumbs-link" href="#">Article title</a>
