--- a/src/html/secondPages/blog.html
+++ b/src/html/secondPages/blog.html
@@ -13,14 +13,14 @@
 		<div class="blog__box">
 			<div class="blog__posts posts">
 				<div class="blog__post post">
-					<a class="post__image blog__post-image" href="#">
+					<a class="post__image blog__post-image" href="../article/index.html">
 						<img src="../@img/blog/blog_1.jpg" alt="background image">
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
 							<p class="post__tag-category border-radius-gradient">gaming</p>
 						</div>
-						<a class="post__inner blog__post-inner" href="#">
+						<a class="post__inner blog__post-inner" href="../article/index.html">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
 							<h3 class="post__subtitle blog__post-subtitle">Boosteroid Latest July News</h3>
 						</a>
